find_package(Sophus REQUIRED)
include_directories(${Sophus_INCLUDE_DIRS})

find_package(Pangolin REQUIRED)

add_executable(joinMap joinMap.cpp)
target_link_libraries(joinMap ${OpenCV_LIBS} ${Pangolin_LIBRARIES})

target_include_directories(slam PUBLIC ${PROJECT_SOURCE_DIR}/include)
target_link_libraries(joinMap slam)